# module-compression-7z-native-win64

./: .gitignore  .travis.yml  LICENSE  pom.xml
src/main/scripts/win64/: CMakeLists.txt  build.sh
